change footer hobby

--- a/Hobby.html
+++ b/Hobby.html
@@ -34,7 +34,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Profil Saya. Hak cipta dilindungi.</p>
+        <p>&#169; Muhamad Hilal. All rigths reserved</p>
     </footer>
 </body>
 </html>
